# app/Http/Controllers/Api/v1/AuthController.php
@@ -44,9 +44,9 @@ class AuthController extends Controller
      *         required=true,
      *         description="User data",
      *         @OA\JsonContent(
-     *             @OA\Property(property="name", type="string", example="John Doe"),
+     *             @OA\Property(property="name", type="string", example="Collaborator John Doe"),
      *             @OA\Property(property="email", type="string", example="john@example.com"),
-     *             @OA\Property(property="password", type="string", format="password", example="secret"),
+     *             @OA\Property(property="password", type="string", format="password", example="password"),
      *         ),
      *     ),
      *     @OA\Response(
@@ -59,7 +59,6 @@ class AuthController extends Controller
      *     ),
      * )
      */
-
     public function register(Request $request)
     {
         // Validate the incoming request data
@@ -84,8 +83,16 @@ class AuthController extends Controller
             'password' => Hash::make($request->password),
         ]);
 
-        // Assign the "Collaborator" role if it exists
-        $collaboratorRole = Role::where('name', 'Collaborator')->first();
+        // Determine the user's role based on their name
+        $check_role = strtok($request->name, " ");
+        if ($check_role == "Author") {
+            // Assign the "Author" role if it exists
+            $collaboratorRole = Role::where('name', 'Author')->first();
+        } else {
+            // Assign the "Collaborator" role if not "Author"
+            $collaboratorRole = Role::where('name', 'Collaborator')->first();
+        }
+
         if ($collaboratorRole) {
             $user->assignRole($collaboratorRole);
         }
@@ -117,8 +124,8 @@ class AuthController extends Controller
      *         required=true,
      *         description="Login credentials",
      *         @OA\JsonContent(
-     *             @OA\Property(property="email", type="string", example="john@example.com"),
-     *             @OA\Property(property="password", type="string", format="password", example="secret"),
+     *             @OA\Property(property="email", type="string", example="author@example.com"),
+     *             @OA\Property(property="password", type="string", format="password", example="password"),
      *         ),
      *     ),
      *     @OA\Response(
@@ -131,13 +138,14 @@ class AuthController extends Controller
      *     ),
      * )
      */
-
     public function login(Request $request)
     {
+        // Ensure email is in lowercase for consistency
         $request->merge(['email' => strtolower($request->email)]);
 
         $credentials = $request->only(['email', 'password']);
 
+        // Validate the login credentials
         $validator = Validator::make($credentials, [
             'email'    => 'required|email|max:255',
             'password' => 'required|min:8',
@@ -151,7 +159,9 @@ class AuthController extends Controller
             ]);
         }
 
+        // Retrieve the user by email
         $user = User::where('email', $request['email'])->first();
+
         if (!$user) {
             return response()->json([
                 'success' => false,
@@ -188,6 +198,7 @@ class AuthController extends Controller
         }
     }
 
+
     /**
      * @OA\Post(
      *     path="/api/v1/auth/forgot/send-reset-otp",
@@ -216,10 +227,9 @@ class AuthController extends Controller
      *     ),
      * )
      */
-
     public function send_reset_otp(Request $request)
     {
-
+        // Extract the email from the request
         $credentials = $request->only(['email']);
 
         // Validate the request data
@@ -227,6 +237,7 @@ class AuthController extends Controller
             'email' => 'required|email|exists:users',
         ]);
 
+        // Check for validation failure
         if ($validator->fails()) {
             return response()->json([
                 'success' => false,
@@ -235,10 +246,10 @@ class AuthController extends Controller
             ]);
         }
 
-        // Generate a random OTP
+        // Generate a random OTP (One-Time Password)
         $otp = mt_rand(100000, 999999);
 
-        // Store the OTP in the database
+        // Store the OTP in the database for later verification
         DB::table('password_reset_tokens')->updateOrInsert(['email' => $request->email], [
             'email' => $request->email,
             'otp' => $otp,
@@ -254,7 +265,7 @@ class AuthController extends Controller
             'body' => $emailBody,
         ];
 
-        // Send the email
+        // Attempt to send the email
         try {
             Mail::to($request->email)->send(new EmailServices($emailDetails));
 
@@ -302,16 +313,18 @@ class AuthController extends Controller
      *     ),
      * )
      */
-
     public function verify_otp(Request $request)
     {
+        // Extract email and OTP (One-Time Password) from the request
         $credentials = $request->only(['email', 'otp']);
 
+        // Validate the request data
         $validator = Validator::make($credentials, [
             'email' => 'required|email|exists:users',
             'otp'   => 'required|integer|digits:6',
         ]);
 
+        // Check for validation failure
         if ($validator->fails()) {
             return response()->json([
                 'success' => false,
@@ -320,15 +333,19 @@ class AuthController extends Controller
             ]);
         }
 
+        // Find the OTP record in the database
         $passwordReset = PasswordReset::where([
             'email' => $request->email,
             'otp' => $request->otp
         ])->first();
-        if ($passwordReset) {
 
+        // Check if OTP record exists
+        if ($passwordReset) {
             $otpCreateTime = Carbon::parse($passwordReset->created_at);
             $now = Carbon::now();
             $diffInMinutes = $now->diffInMinutes($otpCreateTime);
+
+            // Check if OTP is still valid (within 5 minutes)
             if ($diffInMinutes < 5) {
                 if ($passwordReset->otp == $request->otp) {
                     return response()->json([
@@ -371,7 +388,7 @@ class AuthController extends Controller
      *         description="User email and new password",
      *         @OA\JsonContent(
      *             @OA\Property(property="email", type="string", format="email", example="john@example.com"),
-     *             @OA\Property(property="password", type="string", format="password", example="new_secret"),
+     *             @OA\Property(property="password", type="string", format="password", example="password"),
      *         ),
      *     ),
      *     @OA\Response(
@@ -388,16 +405,18 @@ class AuthController extends Controller
      *     ),
      * )
      */
-
     public function reset(Request $request)
     {
+        // Extract email and new password from the request
         $credentials = $request->only(['email', 'password']);
 
+        // Validate the request data
         $validator = Validator::make($credentials, [
             'email' => 'required|email|exists:users',
             'password' => 'required| min:8',
         ]);
 
+        // Check for validation failure
         if ($validator->fails()) {
             return response()->json([
                 'success' => false,
@@ -405,31 +424,23 @@ class AuthController extends Controller
                 'data'    => [],
             ]);
         } else {
-
-
             $passwordReset = PasswordReset::where([
                 'email' => $request->email,
             ])->first();
 
-
-            // $passwordReset = Password::sendResetLink([
-            //     'email' => $request->email,
-            // ])->first();
-
-
-
-
             if ($passwordReset) {
-
                 $otpCreateTime = Carbon::parse($passwordReset->created_at);
                 $now = Carbon::now();
                 $diffInMinutes = $now->diffInMinutes($otpCreateTime);
 
+                // Check if OTP is still valid (within 5 minutes)
                 if ($diffInMinutes < 5) {
+                    // Update the user's password
                     User::where('email', $request->email)->update([
                         'password' => Hash::make($request->password)
                     ]);
-                    // (new EmailService)->passwordReset([] , $request , "emailTemplates/passwordReset");
+
+                    // Delete the OTP record
                     DB::table('password_reset_tokens')->where([
                         'email' => $request->email
                     ])->delete();
@@ -458,7 +469,7 @@ class AuthController extends Controller
 
 
     /**
-     * @OA\Delete(
+     * @OA\Post(
      *     path="/api/v1/auth/account-delete",
      *     operationId="deleteUserAccount",
      *     tags={"Authentication"},
@@ -469,7 +480,7 @@ class AuthController extends Controller
      *         description="User credentials",
      *         @OA\JsonContent(
      *             @OA\Property(property="email", type="string", example="john@example.com"),
-     *             @OA\Property(property="password", type="string", format="password", example="secret"),
+     *             @OA\Property(property="password", type="string", format="password", example="password"),
      *         ),
      *     ),
      *     @OA\Response(
@@ -482,16 +493,18 @@ class AuthController extends Controller
      *     ),
      * )
      */
-
     public function accountDelete(Request $request)
     {
+        // Extract email and password from the request
         $credentials = $request->only(['email', 'password']);
 
+        // Validate the request data
         $validator = Validator::make($credentials, [
             'email' => 'required|email|exists:users',
-            'password' => 'required| min:8',
+            'password' => 'required|min:8',
         ]);
 
+        // Check for validation failure
         if ($validator->fails()) {
             return response()->json([
                 'success' => false,
@@ -499,7 +512,10 @@ class AuthController extends Controller
                 'data'    => [],
             ]);
         } else {
+            // Find the user by email
             $user = User::where('email', $request->email)->first();
+
+            // Check if the provided password matches the user's password
             if (!Hash::check($request->password, $user->password)) {
                 return response()->json([
                     'success' => false,
@@ -507,7 +523,9 @@ class AuthController extends Controller
                     'data'    => [],
                 ]);
             } else {
+                // Delete the user account
                 $user->delete();
+
                 return response()->json([
                     'success' => true,
                     'message' => "User Deleted Successfully",
