# app/Http/Middleware/VerifyCsrfToken.php
@@ -12,8 +12,13 @@ class VerifyCsrfToken extends Middleware
      * @var array<int, string>
      */
     protected $except = [
-        '/api/v1/books/add',
-        '/api/v1/books/edit/{id}',
-        //
+        '/api/v1/auth/*',
+        '/api/v1/books/*',
+        '/api/v1/section/*',
+        '/api/v1/subsection/*',
+
+        // '/api/v1/books/add',
+        // '/api/v1/books/edit/*',        
+        // '/api/v1/books/delete/*',        
     ];
 }
